# rubrum_rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
config/: angle_symbols.toml  aspect_degrees.toml  aspect_rules.toml  body_symbols.toml  chart_point_symbols.toml  element_symbols.toml  lot_symbols.toml  orb_degrees.toml  sign_symbols.toml
examples/: aspect_rules_from_toml.rs  compiled_rules.rs  endpoint_filter.rs  endpoint_key.rs  natal_aspects_with_filters.rs
src/: angle.rs  aspect.rs  body.rs  body_group.rs  body_sign.rs  body_sign_degree.rs  body_sign_degree_relation.rs  body_sign_degree_relation_group.rs  chart.rs  chart_point.rs  constants.rs  constellation.rs  coordinate.rs  decan.rs  degree30.rs  degree360.rs  element_kind.rs  endpoint_filter.rs  endpoint_key.rs  ephemeris.rs  house.rs  house_sign_degree.rs  house_system.rs  lib.rs  lot.rs  moment_seed.rs  motion.rs  occupant.rs  orb.rs  parse.rs  placement.rs  placement_relation.rs  placement_relation_group.rs  placement_relation_group_aspect_match.rs  planet.rs  quality.rs  representation.rs  rulership.rs  sign.rs  sign_degree.rs  (+6 more)
src/aspect/: aspect_rules.rs  aspect_rules_compiled.rs  aspect_set.rs  body_sign_degree_exact_aspect_matches.rs  compute.rs  degree_aspect_kind.rs  degree_aspect_match_kind.rs  exact_degree_aspect.rs  placement_exact_aspect_matches.rs  rules_hash.rs  sign_aspect.rs  sign_aspect_kind.rs  sign_body_degree_aspect.rs
src/body/: body_symbol_text.rs
src/constants/: aspect_constants.rs  body_group_constants.rs  exaltation_constants.rs  thema_mundi.rs
src/quality/: humor.rs  (+5 more)
(+5 files in other folders)
