[package]
name = "rubrum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#strum = { version = "0.26", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
# You can also use the "derive" feature, and import the macros directly from "strum"
#strum = { version = "0.27", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }

num_enum = "0.7.3"
itertools = "0.13"
once_cell = "1.21.3"

# Runtime TOML parsing is used by build.rs to generate consts.
# `toml` is only needed at build-time and for a handful of runtime config loaders.
# Keep it in `[dependencies]`.
toml = "0.8"

[features]
default = []

[build-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
serde_json = "1.0"
anyhow = "1.0"

# Used by EndpointFilter TOML tests.
toml = "0.8"

[[example]]
name = "endpoint_key"

[[example]]
name = "endpoint_filter"

[[example]]
name = "compiled_rules"

[[example]]
name = "natal_aspects_with_filters"

[[example]]
name = "aspect_rules_from_toml"

